--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
 }
 
-#life_screen {
+.life_screen {
     width:400px;
     height:400px;
     border: darkblue solid 3px;
